footer updated w social icons

--- a/assets/css/stylesv15.scss
+++ b/assets/css/stylesv15.scss
@@ -194,6 +194,33 @@ nav {
     padding-bottom: 2em;
 }
 
+// FOOTER
+
+.footer-icons {
+    display: flex;
+    flex-direction: row;
+    left: 80%;
+    font-size: 2.5rem;
+    justify-content: center;
+    z-index: 1;
+}
+
+.footer-icons>a:nth-child(1):hover {
+    color: $red;
+}
+
+.footer-icons>a:nth-child(2):hover {
+    color: $yellow;
+}
+
+.footer-icons>a:nth-child(3):hover {
+    color: $green;
+}
+
+.footer-icons>a:nth-child(4):hover {
+    color: $blue;
+}
+
 // MEDIA QUERIES
 
 // Small devices (landscape phones, 576px and up)
