--- a/assets/css/stylesv15.css
+++ b/assets/css/stylesv15.css
@@ -136,6 +136,38 @@ nav {
   padding-bottom: 2em;
 }
 
+.footer-icons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  left: 80%;
+  font-size: 2.5rem;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  z-index: 1;
+}
+
+.footer-icons > a:nth-child(1):hover {
+  color: #E06B65;
+}
+
+.footer-icons > a:nth-child(2):hover {
+  color: #FFFF99;
+}
+
+.footer-icons > a:nth-child(3):hover {
+  color: #99CC99;
+}
+
+.footer-icons > a:nth-child(4):hover {
+  color: #99CCFF;
+}
+
 @media (min-width: 576px) {
   .navbar-light .navbar-nav .nav-link {
     padding-left: 0;
