clean up stylesheets

--- a/assets/css/floatingblocks.scss
+++ b/assets/css/floatingblocks.scss
@@ -1,5 +1,5 @@
 //COLOR SET
-
+$background: #E95633;
 $red: #E06B65;
 $yellow: #FFFF99;
 $green: #99CC99;
@@ -8,45 +8,24 @@ $gray: #C4C4C4;
 $black: #202020;
 
 .topbar {
-    background-color: #E95633;
-    color: white;
+    background-color: $background;
     opacity: 0.8;
 }
 
 #underline1 {
-    background: #E95633;
+    background: $background;
 }
 
 #underline2 {
-    background: #E95633;
+    background: $background;
 }
 
 #underline3 {
-    background: #E95633;
+    background: $background;
 }
 
 #underline4 {
-    background: #E95633;
-}
-
-#underline5 {
-    background: #E95633;
-    width: 14rem;
-}
-
-#underline6 {
-    background: #E95633;
-    width: 15rem;
-}
-
-#underline7 {
-    background: #E95633;
-    width: 16rem;
-}
-
-.col-4 {
-    margin-right: 0;
-    margin-left: 0;
+    background: $background;
 }
 
 .p1 {
@@ -67,75 +46,4 @@ $black: #202020;
 
 .p5 {
     border-color: $gray;
-}
-
-@media (min-width: 576px) {
-    #underline1 {
-        width:;
-    }
-
-    #underline2 {
-    
-    }
-
-    #underline3 {
-    
-    }
-
-    #underline4 {
-        
-    }
-
-    #underline5 {
-        
-    }
-
-    #underline6 {
-    
-    }
-
-    #underline7 {
-        width: 18rem;
-    }
-}
-
-@media (min-width: 768px) {
-
-    #underline5 {
-        background: #E95633;
-        width: 12rem;
-    }
-
-    #underline6 {
-        background: #E95633;
-        width: 12.5rem;
-
-    }
-
-    #underline7 {
-        background: #E95633;
-        width: 12rem;
-    }
-
-}
-
-@media (min-width: 992px) {
-    #underline5 {
-        background: #E95633;
-        width: 12rem;
-    }
-
-    #underline6 {
-        background: #E95633;
-        width: 12.5rem;
-    }
-
-    #underline7 {
-        background: #E95633;
-        width: 13.5rem;
-    }
-
-}
-
-@media (min-width: 1200px) {
 }
