--- a/assets/css/stylesv15.scss
+++ b/assets/css/stylesv15.scss
@@ -205,19 +205,19 @@ nav {
     z-index: 1;
 }
 
-.footer-icons>a:nth-child(1):hover {
+.footer-icon-1:hover {
     color: $red;
 }
 
-.footer-icons>a:nth-child(2):hover {
+.footer-icon-2:hover {
     color: $yellow;
 }
 
-.footer-icons>a:nth-child(3):hover {
+.footer-icon-3:hover {
     color: $green;
 }
 
-.footer-icons>a:nth-child(4):hover {
+.footer-icon-4:hover {
     color: $blue;
 }
 
@@ -240,9 +240,9 @@ nav {
         border-color: $gray;
     }
 
-    footer > a:hover {
-        opacity: 0.7;
-    }
+    // footer > a:hover {
+    //     opacity: 0.7;
+    // }
 
     img.d-inline-block.align-top:hover {
         opacity: 0.5;
