--- a/assets/css/concha.css
+++ b/assets/css/concha.css
@@ -1,93 +1,41 @@
 .topbar {
   background-color: #FFCF35;
-  color: white;
+  opacity: 0.8;
 }
 
 #underline1 {
   background: #FFCF35;
-  border-radius: 50px;
-  width: 308px;
-  height: 20px;
-  position: absolute;
-  z-index: -1;
-  -webkit-transform: translateY(-32px);
-  transform: translateY(-32px);
 }
 
 #underline2 {
   background: #FFCF35;
-  border-radius: 50px;
-  width: 308px;
-  height: 20px;
-  position: absolute;
-  z-index: -1;
-  -webkit-transform: translateY(-32px);
-  transform: translateY(-32px);
 }
 
 #underline3 {
   background: #FFCF35;
-  border-radius: 50px;
-  width: 308px;
-  height: 20px;
-  position: absolute;
-  z-index: -1;
-  -webkit-transform: translateY(-32px);
-  transform: translateY(-32px);
 }
 
 #underline4 {
   background: #FFCF35;
-  border-radius: 50px;
-  width: 308px;
-  height: 20px;
-  position: absolute;
-  z-index: -1;
-  -webkit-transform: translateY(-32px);
-  transform: translateY(-32px);
 }
 
-#underline5 {
-  background: #FFCF35;
-  border-radius: 50px;
-  width: 308px;
-  height: 20px;
-  position: absolute;
-  z-index: -1;
-  -webkit-transform: translateY(-42px);
-  transform: translateY(-42px);
+.p1 {
+  border-color: #E06B65;
 }
 
-#underline6 {
-  background: #FFCF35;
-  border-radius: 50px;
-  width: 308px;
-  height: 20px;
-  position: absolute;
-  z-index: -1;
-  -webkit-transform: translateY(-42px);
-  transform: translateY(-42px);
+.p2 {
+  border-color: #FFFF99;
 }
 
-#underline7 {
-  background: #FFCF35;
-  border-radius: 50px;
-  width: 308px;
-  height: 20px;
-  position: absolute;
-  z-index: -1;
-  -webkit-transform: translateY(-42px);
-  transform: translateY(-42px);
+.p3 {
+  border-color: #99CC99;
 }
 
-#underline8 {
-  background: #FFCF35;
-  border-radius: 50px;
-  width: 308px;
-  height: 20px;
-  position: absolute;
-  z-index: -1;
-  -webkit-transform: translateY(-42px);
-  transform: translateY(-42px);
+.p4 {
+  border-color: #99CCFF;
+}
+
+.p5 {
+  border-color: #C4C4C4;
 }
 /*# sourceMappingURL=concha.css.map */
