--- a/assets/css/netic.scss
+++ b/assets/css/netic.scss
@@ -1,92 +1,66 @@
+//COLOR SET
+$background: #6D6D6D; // topbar color
+$underline: #F6D0E0;
+$red: #E06B65;
+$yellow: #FFFF99;
+$green: #99CC99;
+$blue: #99CCFF;
+$gray: #C4C4C4;
+$black: #343434;
+
 .topbar {
-    background-color: #6D6D6D;
-    color: white;
+    background-color: $background;
+    opacity: 0.8;
+}
+
+.fourth {
+    //PLACEHOLDER - will change spacing of two images in fourth deliverable
+    margin-bottom: 0;
+}
+
+.youtube {
+    margin-top: 1rem;
+    margin-bottom: 2rem;
 }
 
 #underline1 {
-    background: rgba(246, 208, 224, 0.6);
-    border-radius: 50px;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    -webkit-transform: translateY(-32px);
-    transform: translateY(-32px);
+    background: $underline;
 }
 
 #underline2 {
-    background: rgba(246, 208, 224, 0.6);
-    border-radius: 50px;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    -webkit-transform: translateY(-32px);
-    transform: translateY(-32px);
+    background: $underline;
+
 }
 
 #underline3 {
-    background: rgba(246, 208, 224, 0.6);
-    border-radius: 50px;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    -webkit-transform: translateY(-32px);
-    transform: translateY(-32px);
+    background: $underline;
 }
 
 #underline4 {
-    background: rgba(246, 208, 224, 0.6);
-    border-radius: 50px;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    -webkit-transform: translateY(-32px);
-    transform: translateY(-32px);
+    background: $underline;
+
 }
 
-#underline5 {
-    background: #F6D0E0;
-    border-radius: 50px;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    -webkit-transform: translateY(-42px);
-    transform: translateY(-42px);
+.p1 {
+    border-color: $red; // color of first teammember
 }
 
-#underline6 {
-    background: #F6D0E0;
-    border-radius: 50px;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    -webkit-transform: translateY(-42px);
-    transform: translateY(-42px);
+.p2 {
+    border-color: $yellow; // color of second teammember
 }
 
-#underline7 {
-    background: #F6D0E0;
-    border-radius: 50px;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    -webkit-transform: translateY(-42px);
-    transform: translateY(-42px);
+.p3 {
+    border-color: $green; // color of third teammember
 }
 
-#underline8 {
-    background: #F6D0E0;
-    border-radius: 50px;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    -webkit-transform: translateY(-42px);
-    transform: translateY(-42px);
+.p4 {
+    border-color: $blue; // color of fourth teammember
+}
+
+.p5 {
+    border-color: $gray; // color of fifth teammember
+}
+
+.p6 {
+    border-color: $black; // color of fifth teammember
 }
