--- a/assets/css/anindividualproj15.css
+++ b/assets/css/anindividualproj15.css
@@ -202,9 +202,15 @@ p {
   font-weight: bold;
 }
 
-.p1, .p2, .p3, .p4, .p5, .p6, .p7 {
+.p, .p1, .p2, .p3, .p4, .p5, .p6, .p7, .p8, .p9, .p10 {
   padding-left: 10px;
   margin-bottom: 35px;
+  padding-right: 10px;
+}
+
+ul {
+  padding-left: 35px;
+  padding-right: 10px;
 }
 
 .left {
