--- a/assets/css/bsfc.scss
+++ b/assets/css/bsfc.scss
@@ -1,92 +1,49 @@
+//COLOR SET
+$background: #87CC6B; //CHANGE to topbar color
+$red: #E06B65;
+$yellow: #FFFF99;
+$green: #99CC99;
+$blue: #99CCFF;
+$gray: #C4C4C4;
+$black: #202020;
+
 .topbar {
-    background-color: #87CC6B;
-    color: white;
+    background-color: $background;
+    opacity: 0.8;
 }
 
 #underline1 {
-    background: #87CC6B;
-    border-radius: 50px;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    -webkit-transform: translateY(-32px);
-    transform: translateY(-32px);
+    background: $background;
 }
 
 #underline2 {
-    background: #87CC6B;
-    border-radius: 50px;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    -webkit-transform: translateY(-32px);
-    transform: translateY(-32px);
+    background: $background;
 }
 
 #underline3 {
-    background: #87CC6B;
-    border-radius: 50px;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    -webkit-transform: translateY(-32px);
-    transform: translateY(-32px);
+    background: $background;
 }
 
 #underline4 {
-    background: #87CC6B;
-    border-radius: 50px;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    -webkit-transform: translateY(-32px);
-    transform: translateY(-32px);
+    background: $background;
 }
 
-#underline5 {
-    background: #87CC6B;
-    border-radius: 50px;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    -webkit-transform: translateY(-42px);
-    transform: translateY(-42px);
+.p1 {
+    border-color: $red; //\color of first teammember
 }
 
-#underline6 {
-    background: #87CC6B;
-    border-radius: 50px;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    -webkit-transform: translateY(-42px);
-    transform: translateY(-42px);
+.p2 {
+    border-color: $yellow; //color of second teammember
 }
 
-#underline7 {
-    background: #87CC6B;
-    border-radius: 50px;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    -webkit-transform: translateY(-42px);
-    transform: translateY(-42px);
+.p3 {
+    border-color: $green; //color of third teammember
 }
 
-#underline8 {
-    background: #87CC6B;
-    border-radius: 50px;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    -webkit-transform: translateY(-42px);
-    transform: translateY(-42px);
+.p4 {
+    border-color: $blue; //color of fourth teammember
+}
+
+.p5 {
+    border-color: $gray; //color of fifth teammember
 }
