--- a/assets/css/thrive.css
+++ b/assets/css/thrive.css
@@ -1,90 +1,53 @@
 .topbar {
   background-color: #38849A;
-  color: white;
+  opacity: 0.9;
 }
 
 #underline1 {
   background: #38849A;
-  width: 308px;
-  height: 20px;
-  position: absolute;
-  z-index: -1;
-  -webkit-transform: translateY(-32px);
-  transform: translateY(-32px);
 }
 
 #underline2 {
   background: #38849A;
-  width: 308px;
-  height: 20px;
-  position: absolute;
-  z-index: -1;
-  -webkit-transform: translateY(-32px);
-  transform: translateY(-32px);
 }
 
 #underline3 {
   background: #38849A;
-  border-radius: 50px;
-  width: 308px;
-  height: 20px;
-  position: absolute;
-  z-index: -1;
-  -webkit-transform: translateY(-32px);
-  transform: translateY(-32px);
 }
 
 #underline4 {
   background: #38849A;
-  border-radius: 50px;
-  width: 308px;
-  height: 20px;
-  position: absolute;
-  z-index: -1;
-  -webkit-transform: translateY(-32px);
-  transform: translateY(-32px);
 }
 
-#underline5 {
-  background: #38849A;
-  border-radius: 50px;
-  width: 308px;
-  height: 20px;
-  position: absolute;
-  z-index: -1;
-  -webkit-transform: translateY(-42px);
-  transform: translateY(-42px);
+.p1 {
+  border-color: #E06B65;
 }
 
-#underline6 {
-  background: #38849A;
-  border-radius: 50px;
-  width: 308px;
-  height: 20px;
-  position: absolute;
-  z-index: -1;
-  -webkit-transform: translateY(-42px);
-  transform: translateY(-42px);
+.p2 {
+  border-color: #FFFF99;
 }
 
-#underline7 {
-  background: #38849A;
-  border-radius: 50px;
-  width: 308px;
-  height: 20px;
-  position: absolute;
-  z-index: -1;
-  -webkit-transform: translateY(-42px);
-  transform: translateY(-42px);
+.p3 {
+  border-color: #99CC99;
 }
 
-#underline8 {
-  background: #38849A;
-  width: 308px;
-  height: 20px;
-  position: absolute;
-  z-index: -1;
-  -webkit-transform: translateY(-42px);
-  transform: translateY(-42px);
+.p4 {
+  border-color: #99CCFF;
+}
+
+.p5 {
+  border-color: #838EBF;
+}
+
+.p6 {
+  border-color: #F2D4D3;
+}
+
+.p7 {
+  border-color: #D0B3F5;
+}
+
+.p8 {
+  border-color: #D9A38D;
 }
 /*# sourceMappingURL=thrive.css.map */
