--- a/assets/css/thrive.scss
+++ b/assets/css/thrive.scss
@@ -1,89 +1,63 @@
+//COLOR SET
+$background: #38849A; // topbar color
+$red: #E06B65;
+$yellow: #FFFF99;
+$green: #99CC99;
+$blue: #99CCFF;
+$dark-blue:#838EBF;
+$pink: #F2D4D3;
+$purple: #D0B3F5;
+$brown: #D9A38D;
+
 .topbar {
-    background-color: #38849A;
-    color: white;
+    background-color: $background;
+    opacity: 0.9;
 }
 
 #underline1 {
-    background: #38849A;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    -webkit-transform: translateY(-32px);
-    transform: translateY(-32px);
+    background: $background;
 }
 
 #underline2 {
-    background: #38849A;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    -webkit-transform: translateY(-32px);
-    transform: translateY(-32px);
+    background: $background;
 }
 
 #underline3 {
-    background: #38849A;
-    border-radius: 50px;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    -webkit-transform: translateY(-32px);
-    transform: translateY(-32px);
+    background: $background;
 }
 
 #underline4 {
-    background: #38849A;
-    border-radius: 50px;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    -webkit-transform: translateY(-32px);
-    transform: translateY(-32px);
+    background: $background;
 }
 
-#underline5 {
-    background: #38849A;
-    border-radius: 50px;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    -webkit-transform: translateY(-42px);
-    transform: translateY(-42px);
+.p1 {
+    border-color: $red; // color of first teammember
 }
 
-#underline6 {
-    background: #38849A;
-    border-radius: 50px;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    -webkit-transform: translateY(-42px);
-    transform: translateY(-42px);
+.p2 {
+    border-color: $yellow; // color of second teammember
 }
 
-#underline7 {
-    background: #38849A;
-    border-radius: 50px;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    -webkit-transform: translateY(-42px);
-    transform: translateY(-42px);
+.p3 {
+    border-color: $green; // color of third teammember
 }
 
-#underline8 {
-    background: #38849A;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    -webkit-transform: translateY(-42px);
-    transform: translateY(-42px);
+.p4 {
+    border-color: $blue; // color of fourth teammember
+}
+
+.p5 {
+    border-color: $dark-blue; // color of fifth teammember
+}
+
+.p6 {
+    border-color: $pink; // color of sixth teammember
+}
+
+.p7 {
+    border-color: $purple; // color of seventh teammember
+}
+
+.p8 {
+    border-color: $brown; // color of eighth teammember
 }
