--- a/assets/css/makerspace.scss
+++ b/assets/css/makerspace.scss
@@ -1,90 +1,53 @@
+//COLOR SET
+$background: #8C4C7E; // topbar color
+$red: #E06B65;
+$yellow: #FFFF99;
+$green: #99CC99;
+$blue: #99CCFF;
+$gray: #C4C4C4;
+$black: #202020;
+
 .topbar {
-    background-color: #8C4C7E;
-    color: white;
+    background-color: $background;
+    opacity: 0.8;
 }
 
 #underline1 {
-    background: #8C4C7E;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    -webkit-transform: translateY(-32px);
-    transform: translateY(-32px);
+    background: $background;
 }
 
 #underline2 {
-    background: #8C4C7E;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    -webkit-transform: translateY(-32px);
-    transform: translateY(-32px);
+    background: $background;
 }
 
 #underline3 {
-    background: #8C4C7E;
-    opacity: 50%;
-    border-radius: 50px;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    -webkit-transform: translateY(-32px);
-    transform: translateY(-32px);
+    background: $background;
 }
 
 #underline4 {
-    background: #8C4C7E;
-    border-radius: 50px;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    -webkit-transform: translateY(-32px);
-    transform: translateY(-32px);
+    background: $background;
 }
 
-#underline5 {
-    background: #8C4C7E;
-    border-radius: 50px;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    -webkit-transform: translateY(-42px);
-    transform: translateY(-42px);
+.p1 {
+    border-color: $red; //CHANGE to color of first teammember
 }
 
-#underline6 {
-    background: #8C4C7E;
-    border-radius: 50px;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    -webkit-transform: translateY(-42px);
-    transform: translateY(-42px);
+.p2 {
+    border-color: $yellow; //CHANGE to color of second teammember
 }
 
-#underline7 {
-    background: #8C4C7E;
-    border-radius: 50px;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    -webkit-transform: translateY(-42px);
-    transform: translateY(-42px);
+.p3 {
+    border-color: $green; //CHANGE to color of third teammember
 }
 
-#underline8 {
-    background: #8C4C7E;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    -webkit-transform: translateY(-42px);
-    transform: translateY(-42px);
+.p4 {
+    border-color: $blue; //CHANGE to color of fourth teammember
+}
+
+.p5 {
+    border-color: $gray; //CHANGE to color of fifth teammember
+}
+
+.p6 {
+    border-color: $black; //CHANGE to color of fifth teammember
 }
