--- a/assets/css/mainscrollv15.css
+++ b/assets/css/mainscrollv15.css
@@ -56,7 +56,7 @@ p {
 }
 
 .social-icons > a:nth-child(2):hover {
-  color: #FFFF99;
+  color: #FFEE52;
 }
 
 .social-icons > a:nth-child(3):hover {
