--- a/assets/css/netic.scss
+++ b/assets/css/netic.scss
@@ -2,7 +2,7 @@
 $background: #6D6D6D; // topbar color
 $underline: #F6D0E0;
 $red: #E06B65;
-$yellow: #FFFF99;
+$yellow: #FFEE52;
 $green: #99CC99;
 $blue: #99CCFF;
 $gray: #C4C4C4;
