--- a/assets/css/stylesv15.css
+++ b/assets/css/stylesv15.css
@@ -157,7 +157,7 @@ nav {
 }
 
 .footer-icon-2:hover {
-  color: #FFFF99;
+  color: #FFEE52;
 }
 
 .footer-icon-3:hover {
@@ -280,7 +280,7 @@ nav {
     border-bottom: solid #E06B65;
   }
   a.contact {
-    border-bottom: solid #FFFF99;
+    border-bottom: solid #FFEE52;
   }
   #about {
     padding-top: 10vh;
