--- a/assets/css/comcafe.scss
+++ b/assets/css/comcafe.scss
@@ -1,7 +1,7 @@
 //COLOR SET
 $background: #F09B67; // topbar color
 $red: #E06B65;
-$yellow: #FFFF99;
+$yellow: #FFEE52;
 $green: #99CC99;
 $blue: #99CCFF;
 $gray: #C4C4C4;
