--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -402,7 +402,7 @@ h5 {
 }
 
 .social-icons > a:nth-child(2):hover {
-  color: #FFFF99;
+  color: #FFEE52;
 }
 
 .social-icons > a:nth-child(3):hover {
