--- a/assets/css/hofmann.scss
+++ b/assets/css/hofmann.scss
@@ -1,92 +1,57 @@
+//COLOR SET
+$background: #E06B65; //topbar color
+$red: #E06B65;
+$yellow: #FFFF99;
+$green: #99CC99;
+$blue: #99CCFF;
+$gray: #C4C4C4;
+$black: #202020;
+
 .topbar {
-    background-color: #E06B65;
-    color: white;
+    background-color: $background;
+}
+
+.youtube {
+    margin-top: 1rem;
+    margin-bottom: 1.5rem;
 }
 
 #underline1 {
-    background: #E06B65;
-    border-radius: 50px;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    -webkit-transform: translateY(-32px);
-    transform: translateY(-32px);
+    background: $background;
 }
 
 #underline2 {
-    background: #E06B65;
-    border-radius: 50px;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    -webkit-transform: translateY(-32px);
-    transform: translateY(-32px);
+    background: $background;
 }
 
 #underline3 {
-    background: #E06B65;
-    border-radius: 50px;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    -webkit-transform: translateY(-32px);
-    transform: translateY(-32px);
+    background: $background;
 }
 
 #underline4 {
-    background: #E06B65;
-    border-radius: 50px;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    -webkit-transform: translateY(-32px);
-    transform: translateY(-32px);
+    background: $background;
 }
 
-#underline5 {
-    background: #E06B65;
-    border-radius: 50px;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    -webkit-transform: translateY(-42px);
-    transform: translateY(-42px);
+.p1 {
+    border-color: $red; //color of first teammember
 }
 
-#underline6 {
-    background: #E06B65;
-    border-radius: 50px;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    -webkit-transform: translateY(-42px);
-    transform: translateY(-42px);
+.p2 {
+    border-color: $yellow; //color of second teammember
 }
 
-#underline7 {
-    background: #E06B65;
-    border-radius: 50px;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    -webkit-transform: translateY(-42px);
-    transform: translateY(-42px);
+.p3 {
+    border-color: $green; //color of third teammember
 }
 
-#underline8 {
-    background: #E06B65;
-    border-radius: 50px;
-    width: 308px;
-    height: 20px;
-    position: absolute;
-    z-index: -1;
-    -webkit-transform: translateY(-42px);
-    transform: translateY(-42px);
+.p4 {
+    border-color: $blue; //color of fourth teammember
+}
+
+.p5 {
+    border-color: $gray; //color of fifth teammember
+}
+
+.p6 {
+    border-color: $black; //color of sixth teammember
 }
