--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -19,6 +19,10 @@ body {
   background-size: cover;
 }
 
+.navbar-light .navbar-nav .nav-link {
+  color: #202020;
+}
+
 .navbar.scrolled {
   background-color: #ffffff !important;
   -webkit-transition: background-color 200ms linear;
@@ -153,6 +157,10 @@ figcaption {
   display: block;
 }
 
+a {
+  color: #202020;
+}
+
 @media (min-width: 576px) {
   #container {
     visibility: none;
@@ -240,13 +248,13 @@ figcaption {
   }
   h2 {
     text-align: left;
-    font-size: 35px;
+    font-size: 1.8rem;
   }
   h4 {
     font-weight: 600;
     font-style: italic;
     padding-bottom: 2rem;
-    font-size: 25px;
+    font-size: 1.2rem;
   }
   #container {
     visibility: visible;
@@ -412,6 +420,7 @@ figcaption {
   #end {
     display: block;
     visibility: visible;
+    margin-top: -1.5rem;
   }
   #origin {
     padding-top: 75px;
@@ -445,13 +454,13 @@ figcaption {
   }
   h2 {
     text-align: left;
-    font-size: 35px;
+    font-size: 2rem;
   }
   h4 {
     font-weight: 600;
     font-style: italic;
     padding-bottom: 2rem;
-    font-size: 25px;
+    font-size: 1.3rem;
   }
 }
 /*# sourceMappingURL=about.css.map */
