--- a/assets/css/anindividualproj15.css
+++ b/assets/css/anindividualproj15.css
@@ -204,7 +204,7 @@ p {
   font-weight: bold;
 }
 
-.p, .p1, .p2, .p3, .p4, .p5, .p6, .p7, .p8, .p9, .p10 {
+.p, .p1, .p2, .p3, .p4, .p5, .p6, .p7, .p8, .p9, .p10, .pspecial {
   padding-left: 10px;
   margin-bottom: 35px;
   padding-right: 10px;
