--- a/assets/css/projects.scss
+++ b/assets/css/projects.scss
@@ -88,7 +88,7 @@ h3 {
   }
   
   footer {
-    background-color: #ffffff;
+    color: $black;
     height: 6vh;
   }
   
@@ -155,6 +155,10 @@ h3 {
   h7 {
     font-size: 0.85rem;
     text-align: center;
+  }
+
+  a {
+    color: $black;
   }
   
   
