--- a/assets/css/anindividualproj15.css
+++ b/assets/css/anindividualproj15.css
@@ -37,7 +37,7 @@
   margin-top: 5vw;
   margin-left: auto;
   margin-right: auto;
-  width: 70%;
+  width: 95%;
   -o-object-fit: contain;
      object-fit: contain;
   display: -webkit-box;
@@ -349,6 +349,9 @@ ul {
   .topbar-img {
     margin-top: 4.5rem;
     margin-bottom: 4.5rem;
+  }
+  .deliverable-img {
+    width: 70%;
   }
   #proj-title {
     padding-top: 5rem;
