--- a/assets/css/anindividualproj15.css
+++ b/assets/css/anindividualproj15.css
@@ -37,7 +37,7 @@
   margin-top: 5vw;
   margin-left: auto;
   margin-right: auto;
-  width: 95%;
+  width: 85%;
   -o-object-fit: contain;
      object-fit: contain;
   display: -webkit-box;
@@ -325,6 +325,12 @@ ul {
   .bubbles {
     width: 5.5em;
   }
+  .deliverable-img {
+    width: 95%;
+  }
+  .small {
+    width: 100%;
+  }
   #users {
     margin-left: 15%;
     width: 12vw;
@@ -352,6 +358,9 @@ ul {
   }
   .deliverable-img {
     width: 70%;
+  }
+  .small {
+    width: 100%;
   }
   #proj-title {
     padding-top: 5rem;
