--- a/assets/css/netic.scss
+++ b/assets/css/netic.scss
@@ -68,4 +68,6 @@ $black: #343434;
 .pspecial {
     border-image: linear-gradient(to bottom, $blue 16.3%, $red 16.3%, $red 32.5%, $yellow 32.5%, $yellow 48.7%, $green 48.7%, $green 64.9%, $gray 64.9%, $gray 81.1%, $black 81.1%); 
     border-image-slice: 1;
+    border-top: none;
+    border-bottom: none;
 }
