--- a/assets/css/hofmann.scss
+++ b/assets/css/hofmann.scss
@@ -16,6 +16,13 @@ $black: #202020;
     margin-bottom: 1.5rem;
 }
 
+.bottom {
+    padding-bottom: 0;
+}
+
+.no-top {
+    margin-top: 2vw;
+}
 #underline1 {
     background: $background;
 }
