--- a/assets/css/stylesv15.css
+++ b/assets/css/stylesv15.css
@@ -18,7 +18,7 @@ footer {
   color: white;
   padding: 20px 10vw;
   text-align: center;
-  margin-top: auto;
+  margin-top: 5vw;
   z-index: 1;
 }
 
