--- a/assets/css/stylesv15.scss
+++ b/assets/css/stylesv15.scss
@@ -30,7 +30,7 @@ footer {
     color: white;
     padding: 20px 10vw;
     text-align: center;
-    margin-top: auto;
+    margin-top: 5vw;
     z-index: 1;
 }
 
