--- a/assets/css/webteam.css
+++ b/assets/css/webteam.css
@@ -1,16 +1,10 @@
 body {
-  background-color: #202020;
-  background-image: url(../img/icbwebteam.svg);
+  background-color: hotpink;
   position: relative;
 }
 
 .role {
   font-size: xx-small;
-}
-
-.col-sm-5th {
-  width: 20%;
-  float: left;
 }
 
 .web {
@@ -77,8 +71,17 @@ h2 {
   min-width: 100px;
 }
 
-.dot.blank {
+.dot.blank,
+.dark {
   background-color: #202020;
+  visibility: hidden;
+  position: absolute;
+  font-size: 0;
+}
+
+.col-0 {
+  width: 0%;
+  float: left;
 }
 
 .dark {
@@ -175,6 +178,11 @@ p {
   .role {
     font-size: x-small;
   }
+  .dot.blank,
+  .dark {
+    visibility: hidden;
+    display: none;
+  }
 }
 
 @media (min-width: 768px) {
@@ -185,6 +193,10 @@ p {
   .quote {
     font-weight: bold;
     font-size: x-small;
+  }
+  .col-sm-5th {
+    width: 20%;
+    float: left;
   }
 }
 
@@ -238,6 +250,16 @@ p {
   }
   p {
     font-size: larger;
+  }
+  .dot.blank,
+  .dark {
+    visibility: visible;
+    font-size: auto;
+    position: relative;
+  }
+  .col-md-5th {
+    width: 20%;
+    float: left;
   }
 }
 
