clouds background webteam

--- a/assets/css/webteam.css
+++ b/assets/css/webteam.css
@@ -171,17 +171,29 @@ p {
   color: white;
 }
 
+.clouds-left, .clouds-right {
+  width: 100%;
+  height: 0px;
+  position: relative;
+}
+
+.clouds-img-1 {
+  width: 30vw;
+  height: auto;
+  margin-top: 40vw;
+}
+
+.clouds-img-2 {
+  width: 30vw;
+  height: auto;
+  margin-top: 40vw;
+  margin-left: 70vw;
+}
+
 @media (min-width: 576px) {
   .dot {
     height: 12vw;
     width: 12vw;
-  }
-  .galaxy {
-    bottom: 50px;
-  }
-  .helmet-img-2 {
-    -webkit-transform: translate(87vw, -140vh) rotate(20deg);
-            transform: translate(87vw, -140vh) rotate(20deg);
   }
   .role {
     font-size: x-small;
@@ -190,6 +202,9 @@ p {
   .dark {
     visibility: hidden;
     display: none;
+  }
+  .clouds-img-1, .clouds-img-2 {
+    margin-top: 12vw;
   }
 }
 
@@ -208,12 +223,14 @@ p {
     width: 20%;
     float: left;
   }
+  .clouds-img-1, .clouds-img-2 {
+    margin-top: 9vw;
+  }
 }
 
 @media (min-width: 992px) {
-  .helmet-img-2 {
-    -webkit-transform: translate(87vw, -200vh) rotate(20deg);
-            transform: translate(87vw, -200vh) rotate(20deg);
+  .clouds-img-1, .clouds-img-2 {
+    margin-top: 8vw;
   }
   .header {
     margin-bottom: 5vh;
@@ -278,6 +295,9 @@ p {
 }
 
 @media (min-width: 1200px) {
+  .clouds-img-1, .clouds-img-2 {
+    margin-top: 7vw;
+  }
   .quote {
     font-size: small;
   }
